# pyrobud

./: .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automerge-dependabot.yml
k8s/: README.md  kustomization.yaml  namespace.yaml  secret.yaml.example  statefulset.yaml
pyrobud/: command.py  launch.py
pyrobud/core/: bot.py  command_dispatcher.py  event_dispatcher.py  module_extender.py  telegram_bot.py
pyrobud/custom_modules/: example.py
pyrobud/modules/: antibot.py  bot_setup.py  debug.py  message_merge.py  moderation.py  network.py  snippet.py  stats.py  sticker.py  system.py
pyrobud/util/: async_helpers.py  config.py  image.py  text.py  tg.py
scripts/: merge_config_from_example.py
