#
# Packaging
#

[tool.poetry]
name = "pyrobud"
version = "3.0.0"
description = "A clean selfbot for Telegram with an emphasis on quality and practicality."
authors = ["Danny Lin <danny@kdrag0n.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kdrag0n/pyrobud"
documentation = "https://github.com/kdrag0n/pyrobud/blob/master/README.md"

# Search info
keywords = ["chat", "telegram", "selfbot", "telegram-bot", "telethon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kdrag0n/pyrobud/issues"
"Community" = "https://t.me/pyrobud"

[tool.poetry.dependencies]
python = "^3.10"

# Core
aiohttp = "^3.9"
colorlog = "^6.0"
telethon = "^1.42"
tomlkit = ">=0.12"
# Performance
cryptg = {version = "^0.5", optional = true}
# Database
msgpack = "^1.0"
plyvel = "^1.5"
# Error handling
gitpython = "^3.1.40"
ratelimit = "^2.2.1"
sentry-sdk = "^2.0"
# Stickers module
pillow = ">=10.0"
# System module
speedtest-cli = "^2.1.3"
# Debug module
meval = "^2.5"
beauty-print = "^0.6.0"
emoji = "^2.0"
regex = ">=2024.0"

[tool.poetry.extras]
fast = ["cryptg"]

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = {version = "^5.13", extras = ["pyproject"]}
mypy = "^1.8"
pre-commit = "^4.0"

[tool.poetry.scripts]
pyrobud = "pyrobud.main:main"


#
# Code formatting
#

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


#
# Build system (for pip)
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
